Fix menu style on mobile

--- a/src/styles/components/Layout.scss
+++ b/src/styles/components/Layout.scss
@@ -14,7 +14,7 @@ $side-width: 14rem;
   padding-bottom: 0.5rem;
   border-bottom: 1px solid $border;
   background-color: $visual-identity-color;
-  height: 25px;
+  min-height: 25px;
   display: flex;
 }
 
